objects/Order__c.object
<CustomObject>
    <description>Satakarni Orders information</description>
    <fields>
        <fullName>Quantity__c</fullName>
        <description>Quantity Of the Product</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SatakarniMenu__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SatakarniMenu</label>
        <referenceTo>SatakarniMenu__c</referenceTo>
        <relationshipLabel>Order</relationshipLabel>
        <relationshipName>Order</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sum_Of_Order__c</fullName>
        <formula>Quantity__c *  SatakarniMenu__r.Price__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum Of Order</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Order</label>
    <nameField>
        <displayFormat>SR{000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>